[package]
name = "vsock-manager"
version = "0.1.0"
license = "Apache-2.0"
authors = ["huangsiyuan <huangsiyuan@kylinos.cn>"]
edition = "2024"

[dependencies]
dashmap = "6.1.0"
anyhow = "1.0.100"
postcard = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.24.0", features = ["derive"] }

mbedtls = { version = "0.13.4", package = "mbedtls-smx", default-features = false, features = [
    "std",
    "ssl",
] }
mbedtls-sys-auto = { version = "2.28.13", package = "mbedtls-sys-auto-smx", default-features = false }
virga = { path = "../virga", features = ["use-xtransport"] }
