[package]
name = "vsock-manager"
version = "0.3.0"
license = "Apache-2.0"
authors = ["huangsiyuan <huangsiyuan@kylinos.cn>"]
edition = "2024"

[dependencies]
dashmap = "6.1"
anyhow = "1.0"
postcard = "1.0"
mbedtls = { version = "0.13", package = "mbedtls-smx", default-features = false, features = [ "std", "ssl" ] }
mbedtls-sys-auto = { version = "2.28", package = "mbedtls-sys-auto-smx", default-features = false }
virga = { version = "0.1", default-features = false, features = [ "use-xtransport" ] }
zeroize = { version = "1.8", default-features = false }
teec-protocol = "0.1"
#teec-protocol = { path = "/home/huanfuxi/git/kylinx-xtee/xtee/rust-libteec/teec-protocol" }
xtee-psk = "0.1"
